--- a/notebooks/01_folder_structure.ipynb
+++ b/notebooks/01_folder_structure.ipynb
@@ -43,46 +43,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File path: D:\\Github\\PyGRF-Result-automation\\data\n",
-      "|-- [DIR] ranked_features\n",
-      "File path: D:\\Github\\PyGRF-Result-automation\\data\\ranked_features\n",
-      "    |-- [FILE] Chicago_CensusTract_HousePrice_ranked_features.csv\n",
-      "    |-- [FILE] Chicago_CensusTract_Population_ranked_features.csv\n",
-      "    |-- [FILE] Chicago_CensusTract_RentalPrice_ranked_features.csv\n",
-      "    |-- [FILE] DC_CensusTract_HousePrice_ranked_features.csv\n",
-      "    |-- [FILE] DC_CensusTract_Population_ranked_features.csv\n",
-      "    |-- [FILE] DC_CensusTract_RentalPrice_ranked_features.csv\n",
-      "    |-- [FILE] Houston_CensusTract_HousePrice_ranked_features.csv\n",
-      "    |-- [FILE] Houston_CensusTract_Population_ranked_features.csv\n",
-      "    |-- [FILE] Houston_CensusTract_RentalPrice_ranked_features.csv\n",
-      "    |-- [FILE] LA_CensusTract_HousePrice_ranked_features.csv\n",
-      "    |-- [FILE] LA_CensusTract_Population_ranked_features.csv\n",
-      "    |-- [FILE] LA_CensusTract_RentalPrice_ranked_features.csv\n",
-      "    |-- [DIR] legacy\n",
-      "File path: D:\\Github\\PyGRF-Result-automation\\data\\ranked_features\\legacy\n",
-      "        |-- [FILE] Chicago_CensusTract_ranked_features.csv\n",
-      "        |-- [FILE] DC_CensusTract_ranked_features.csv\n",
-      "        |-- [FILE] Houston_CensusTract_ranked_features.csv\n",
-      "        |-- [FILE] LA_CensusTract_ranked_features.csv\n",
-      "        |-- [FILE] NYC_CensusTract_ranked_features.csv\n",
-      "        |-- [FILE] SF_CensusTract_ranked_features.csv\n",
-      "    |-- [FILE] NYC_CensusTract_HousePrice_ranked_features.csv\n",
-      "    |-- [FILE] NYC_CensusTract_Population_ranked_features.csv\n",
-      "    |-- [FILE] NYC_CensusTract_RentalPrice_ranked_features.csv\n",
-      "    |-- [FILE] SF_CensusTract_HousePrice_ranked_features.csv\n",
-      "    |-- [FILE] SF_CensusTract_Population_ranked_features.csv\n",
-      "    |-- [FILE] SF_CensusTract_RentalPrice_ranked_features.csv\n",
-      "|-- [DIR] summary\n",
-      "File path: D:\\Github\\PyGRF-Result-automation\\data\\summary\n",
-      "    |-- [FILE] Summary of PyGRF results 2.xlsx\n",
-      "    |-- [FILE] Summary of PyGRF results.xlsx\n"
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\n",
+      "|-- [DIR] data\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\n",
+      "    |-- [DIR] Chicago\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\Chicago\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\Chicago\\CensusTract\n",
+      "            |-- [FILE] Chicago_CensusTract_merged.csv\n",
+      "    |-- [DIR] DC\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\DC\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\DC\\CensusTract\n",
+      "            |-- [FILE] DC_CensusTract_merged.csv\n",
+      "    |-- [DIR] Houston\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\Houston\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\Houston\\CensusTract\n",
+      "            |-- [FILE] Houston_CensusTract_merged.csv\n",
+      "    |-- [DIR] LA\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\LA\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\LA\\CensusTract\n",
+      "            |-- [FILE] LA_CensusTract_merged.csv\n",
+      "    |-- [DIR] NYC\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\NYC\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\NYC\\CensusTract\n",
+      "            |-- [FILE] NYC_CensusTract_merged.csv\n",
+      "    |-- [DIR] SF\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\SF\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\data\\SF\\CensusTract\n",
+      "            |-- [FILE] SF_CensusTract_merged.csv\n",
+      "|-- [DIR] result_20251015_220216\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\n",
+      "    |-- [DIR] Chicago\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\Chicago\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\Chicago\\CensusTract\n",
+      "            |-- [FILE] Chicago_CensusTract_HousePrice_filtered.csv\n",
+      "            |-- [FILE] Chicago_CensusTract_Population_filtered.csv\n",
+      "            |-- [FILE] Chicago_CensusTract_RentalPrice_filtered.csv\n",
+      "    |-- [DIR] DC\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\DC\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\DC\\CensusTract\n",
+      "            |-- [FILE] DC_CensusTract_HousePrice_filtered.csv\n",
+      "            |-- [FILE] DC_CensusTract_Population_filtered.csv\n",
+      "            |-- [FILE] DC_CensusTract_RentalPrice_filtered.csv\n",
+      "    |-- [DIR] Houston\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\Houston\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\Houston\\CensusTract\n",
+      "            |-- [FILE] Houston_CensusTract_HousePrice_filtered.csv\n",
+      "            |-- [FILE] Houston_CensusTract_Population_filtered.csv\n",
+      "            |-- [FILE] Houston_CensusTract_RentalPrice_filtered.csv\n",
+      "    |-- [DIR] LA\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\LA\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\LA\\CensusTract\n",
+      "            |-- [FILE] LA_CensusTract_HousePrice_filtered.csv\n",
+      "            |-- [FILE] LA_CensusTract_Population_filtered.csv\n",
+      "            |-- [FILE] LA_CensusTract_RentalPrice_filtered.csv\n",
+      "    |-- [DIR] NYC\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\NYC\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\NYC\\CensusTract\n",
+      "            |-- [FILE] NYC_CensusTract_HousePrice_filtered.csv\n",
+      "            |-- [FILE] NYC_CensusTract_Population_filtered.csv\n",
+      "            |-- [FILE] NYC_CensusTract_RentalPrice_filtered.csv\n",
+      "    |-- [DIR] SF\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\SF\n",
+      "        |-- [DIR] CensusTract\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\\result_20251015_220216\\SF\\CensusTract\n",
+      "            |-- [FILE] SF_CensusTract_HousePrice_filtered.csv\n",
+      "            |-- [FILE] SF_CensusTract_Population_filtered.csv\n",
+      "            |-- [FILE] SF_CensusTract_RentalPrice_filtered.csv\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
     "    # Set the path to the directory you want to list\n",
-    "    path = r\"D:\\Github\\PyGRF-Result-automation\\data\"\n",
+    "    path = r\"D:\\Github\\PyGRF-Result-automation\\Step2.5-Filing\"\n",
     "    \n",
     "    # Call the function to list the directory structure\n",
     "    list_dir_structure(path)\n",
