--- a/notebooks/07_folder_preserved_delete_files.ipynb
+++ b/notebooks/07_folder_preserved_delete_files.ipynb
@@ -10,42 +10,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Chicago\\CBD\\Chicago_CBD_Core_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Chicago\\CBD\\Chicago_CBD_Greater_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Chicago\\CBD\\Chicago_CBD_Special_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Chicago\\CensusTract\\Chicago_CensusTract_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Chicago\\CityBoundaries\\Chicago_CityBoundaries_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Chicago\\ZipCode\\Chicago_ZipCode_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\DC\\CBD\\DC_CBD_Core_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\DC\\CBD\\DC_CBD_Greater_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\DC\\CBD\\DC_CBD_Special_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\DC\\CensusTract\\DC_CensusTract_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\DC\\CityBoundaries\\DC_CityBoundaries_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\DC\\ZipCode\\DC_ZipCode_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Houston\\CBD\\Houston_CBD_Core_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Houston\\CBD\\Houston_CBD_Greater_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Houston\\CBD\\Houston_CBD_Special_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Houston\\CensusTract\\Houston_CensusTract_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Houston\\CityBoundaries\\Houston_CityBoundaries_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\Houston\\ZipCode\\Houston_ZipCode_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\LA\\CBD\\LA_CBD_Core_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\LA\\CBD\\LA_CBD_Greater_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\LA\\CBD\\LA_CBD_Special_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\LA\\CensusTract\\LA_CensusTract_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\LA\\CityBoundaries\\LA_CityBoundaries_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\LA\\ZipCode\\LA_ZipCode_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\NYC\\CBD\\NYC_CBD_Core_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\NYC\\CBD\\NYC_CBD_Greater_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\NYC\\CBD\\NYC_CBD_Special_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\NYC\\CensusTract\\NYC_CensusTract_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\NYC\\CityBoundaries\\NYC_CityBoundaries_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\NYC\\ZipCode\\NYC_ZipCode_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\SF\\CBD\\SF_CBD_Core_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\SF\\CBD\\SF_CBD_Greater_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\SF\\CBD\\SF_CBD_Special_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\SF\\CensusTract\\SF_CensusTract_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\SF\\CityBoundaries\\SF_CityBoundaries_merged.csv\n",
-      "Deleted file: D:\\Github (not-public)\\GWPCA_EN\\data\\City\\SF\\ZipCode\\SF_ZipCode_merged.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\Chicago\\CensusTract\\Chicago_CensusTract_HousePrice_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\Chicago\\CensusTract\\Chicago_CensusTract_merged.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\Chicago\\CensusTract\\Chicago_CensusTract_Population_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\Chicago\\CensusTract\\Chicago_CensusTract_RentalPrice_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\DC\\CensusTract\\DC_CensusTract_HousePrice_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\DC\\CensusTract\\DC_CensusTract_merged.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\DC\\CensusTract\\DC_CensusTract_Population_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\DC\\CensusTract\\DC_CensusTract_RentalPrice_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\Houston\\CensusTract\\Houston_CensusTract_HousePrice_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\Houston\\CensusTract\\Houston_CensusTract_merged.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\Houston\\CensusTract\\Houston_CensusTract_Population_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\Houston\\CensusTract\\Houston_CensusTract_RentalPrice_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\LA\\CensusTract\\LA_CensusTract_HousePrice_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\LA\\CensusTract\\LA_CensusTract_merged.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\LA\\CensusTract\\LA_CensusTract_Population_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\LA\\CensusTract\\LA_CensusTract_RentalPrice_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\NYC\\CensusTract\\NYC_CensusTract_HousePrice_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\NYC\\CensusTract\\NYC_CensusTract_merged.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\NYC\\CensusTract\\NYC_CensusTract_Population_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\NYC\\CensusTract\\NYC_CensusTract_RentalPrice_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\SF\\CensusTract\\SF_CensusTract_HousePrice_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\SF\\CensusTract\\SF_CensusTract_merged.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\SF\\CensusTract\\SF_CensusTract_Population_filtered.csv\n",
+      "Deleted file: D:\\Github\\GWPCA_R_EN\\results\\City\\SF\\CensusTract\\SF_CensusTract_RentalPrice_filtered.csv\n",
       "✅ All files deleted, all folders preserved.\n"
      ]
     }
@@ -54,7 +42,7 @@
     "import os\n",
     "\n",
     "# Set the target folder path\n",
-    "folder_path = r\"D:\\Github (not-public)\\GWPCA_EN\\data\\City\"\n",
+    "folder_path = r\"D:\\Github\\GWPCA_R_EN\\results\\City\"\n",
     "\n",
     "# Walk through the folder tree\n",
     "for root, dirs, files in os.walk(folder_path):\n",
