--- a/notebooks/01_folder_structure.ipynb
+++ b/notebooks/01_folder_structure.ipynb
@@ -43,130 +43,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\n",
-      "|-- [DIR] Chicago\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\Chicago\n",
-      "    |-- [FILE] .DS_Store\n",
-      "    |-- [DIR] census_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\Chicago\\census_boundary\n",
-      "        |-- [FILE] Chicago_CensusTract.cpg\n",
-      "        |-- [FILE] Chicago_CensusTract.dbf\n",
-      "        |-- [FILE] Chicago_CensusTract.prj\n",
-      "        |-- [FILE] Chicago_CensusTract.shp\n",
-      "        |-- [FILE] Chicago_CensusTract.shx\n",
-      "    |-- [DIR] city_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\Chicago\\city_boundary\n",
-      "        |-- [FILE] Chicago_city.geojson\n",
-      "    |-- [DIR] zip_code_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\Chicago\\zip_code_boundary\n",
-      "        |-- [FILE] Chicago_ZipCode.cpg\n",
-      "        |-- [FILE] Chicago_ZipCode.dbf\n",
-      "        |-- [FILE] Chicago_ZipCode.prj\n",
-      "        |-- [FILE] Chicago_ZipCode.shp\n",
-      "        |-- [FILE] Chicago_ZipCode.shx\n",
-      "|-- [DIR] DC\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\DC\n",
-      "    |-- [DIR] census_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\DC\\census_boundary\n",
-      "        |-- [FILE] DC_CensusTract.cpg\n",
-      "        |-- [FILE] DC_CensusTract.dbf\n",
-      "        |-- [FILE] DC_CensusTract.prj\n",
-      "        |-- [FILE] DC_CensusTract.shp\n",
-      "        |-- [FILE] DC_CensusTract.shx\n",
-      "    |-- [DIR] city_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\DC\\city_boundary\n",
-      "        |-- [FILE] DC_city.geojson\n",
-      "    |-- [DIR] zip_code_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\DC\\zip_code_boundary\n",
-      "        |-- [FILE] DC_ZipCode.cpg\n",
-      "        |-- [FILE] DC_ZipCode.dbf\n",
-      "        |-- [FILE] DC_ZipCode.prj\n",
-      "        |-- [FILE] DC_ZipCode.shp\n",
-      "        |-- [FILE] DC_ZipCode.shx\n",
-      "|-- [DIR] Houston\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\Houston\n",
-      "    |-- [FILE] .DS_Store\n",
-      "    |-- [DIR] census_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\Houston\\census_boundary\n",
-      "        |-- [FILE] Houston_CensusTract.cpg\n",
-      "        |-- [FILE] Houston_CensusTract.dbf\n",
-      "        |-- [FILE] Houston_CensusTract.prj\n",
-      "        |-- [FILE] Houston_CensusTract.shp\n",
-      "        |-- [FILE] Houston_CensusTract.shx\n",
-      "    |-- [DIR] city_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\Houston\\city_boundary\n",
-      "        |-- [FILE] Houston_city.geojson\n",
-      "    |-- [DIR] zip_code_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\Houston\\zip_code_boundary\n",
-      "        |-- [FILE] Houston_ZipCode.cpg\n",
-      "        |-- [FILE] Houston_ZipCode.dbf\n",
-      "        |-- [FILE] Houston_ZipCode.prj\n",
-      "        |-- [FILE] Houston_ZipCode.shp\n",
-      "        |-- [FILE] Houston_ZipCode.shx\n",
-      "|-- [DIR] LA\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\LA\n",
-      "    |-- [DIR] census_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\LA\\census_boundary\n",
-      "        |-- [FILE] LA_CensusTract.cpg\n",
-      "        |-- [FILE] LA_CensusTract.dbf\n",
-      "        |-- [FILE] LA_CensusTract.prj\n",
-      "        |-- [FILE] LA_CensusTract.shp\n",
-      "        |-- [FILE] LA_CensusTract.shx\n",
-      "    |-- [DIR] city_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\LA\\city_boundary\n",
-      "        |-- [FILE] LA_city.geojson\n",
-      "    |-- [DIR] zip_code_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\LA\\zip_code_boundary\n",
-      "        |-- [FILE] LA_ZipCode.cpg\n",
-      "        |-- [FILE] LA_ZipCode.dbf\n",
-      "        |-- [FILE] LA_ZipCode.prj\n",
-      "        |-- [FILE] LA_ZipCode.shp\n",
-      "        |-- [FILE] LA_ZipCode.shx\n",
-      "|-- [DIR] NYC\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\NYC\n",
-      "    |-- [DIR] census_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\NYC\\census_boundary\n",
-      "        |-- [FILE] NYC_CensusTract.cpg\n",
-      "        |-- [FILE] NYC_CensusTract.dbf\n",
-      "        |-- [FILE] NYC_CensusTract.prj\n",
-      "        |-- [FILE] NYC_CensusTract.shp\n",
-      "        |-- [FILE] NYC_CensusTract.shx\n",
-      "    |-- [DIR] city_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\NYC\\city_boundary\n",
-      "        |-- [FILE] NYC_city.geojson\n",
-      "    |-- [DIR] zip_code_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\NYC\\zip_code_boundary\n",
-      "        |-- [FILE] NYC_ZipCode.cpg\n",
-      "        |-- [FILE] NYC_ZipCode.dbf\n",
-      "        |-- [FILE] NYC_ZipCode.prj\n",
-      "        |-- [FILE] NYC_ZipCode.shp\n",
-      "        |-- [FILE] NYC_ZipCode.shx\n",
-      "|-- [DIR] SF\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\SF\n",
-      "    |-- [DIR] census_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\SF\\census_boundary\n",
-      "        |-- [FILE] SF_CensusTract.cpg\n",
-      "        |-- [FILE] SF_CensusTract.dbf\n",
-      "        |-- [FILE] SF_CensusTract.prj\n",
-      "        |-- [FILE] SF_CensusTract.shp\n",
-      "        |-- [FILE] SF_CensusTract.shx\n",
-      "    |-- [DIR] city_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\SF\\city_boundary\n",
-      "        |-- [FILE] SF_city.geojson\n",
-      "    |-- [DIR] zip_code_boundary\n",
-      "File path: D:\\Github\\MGWR_Analysis_TC\\shapefile\\SF\\zip_code_boundary\n",
-      "        |-- [FILE] SF_ZipCode.cpg\n",
-      "        |-- [FILE] SF_ZipCode.dbf\n",
-      "        |-- [FILE] SF_ZipCode.prj\n",
-      "        |-- [FILE] SF_ZipCode.shp\n",
-      "        |-- [FILE] SF_ZipCode.shx\n"
+      "File path: D:\\Github\\MGWR_Analysis_TC\\output\\20251017 MGWR_Results\\Summary of Significant Variables\\statistics\n",
+      "|-- [FILE] Chicago, CensusTract, HousePrice_significant_variable_statistics.csv\n",
+      "|-- [FILE] Chicago, CensusTract, Population_significant_variable_statistics.csv\n",
+      "|-- [FILE] Chicago, CensusTract, RentalPrice_significant_variable_statistics.csv\n",
+      "|-- [FILE] DC, CensusTract, HousePrice_significant_variable_statistics.csv\n",
+      "|-- [FILE] DC, CensusTract, Population_significant_variable_statistics.csv\n",
+      "|-- [FILE] DC, CensusTract, RentalPrice_significant_variable_statistics.csv\n",
+      "|-- [FILE] Houston, CensusTract, HousePrice_significant_variable_statistics.csv\n",
+      "|-- [FILE] Houston, CensusTract, Population_significant_variable_statistics.csv\n",
+      "|-- [FILE] Houston, CensusTract, RentalPrice_significant_variable_statistics.csv\n",
+      "|-- [FILE] LA, CensusTract, HousePrice_significant_variable_statistics.csv\n",
+      "|-- [FILE] LA, CensusTract, Population_significant_variable_statistics.csv\n",
+      "|-- [FILE] LA, CensusTract, RentalPrice_significant_variable_statistics.csv\n",
+      "|-- [FILE] NYC, CensusTract, HousePrice_significant_variable_statistics.csv\n",
+      "|-- [FILE] NYC, CensusTract, Population_significant_variable_statistics.csv\n",
+      "|-- [FILE] NYC, CensusTract, RentalPrice_significant_variable_statistics.csv\n",
+      "|-- [FILE] SF, CensusTract, HousePrice_significant_variable_statistics.csv\n",
+      "|-- [FILE] SF, CensusTract, Population_significant_variable_statistics.csv\n",
+      "|-- [FILE] SF, CensusTract, RentalPrice_significant_variable_statistics.csv\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
     "    # Set the path to the directory you want to list\n",
-    "    path = r\"D:\\Github\\MGWR_Analysis_TC\\shapefile\"\n",
+    "    path = r\"D:\\Github\\MGWR_Analysis_TC\\output\\20251017 MGWR_Results\\Summary of Significant Variables\\statistics\"\n",
     "    \n",
     "    # Call the function to list the directory structure\n",
     "    list_dir_structure(path)\n",
@@ -178,7 +80,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -192,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
